  (change highlights on/off flag).

--Fixed a server-side bug that was causing house pings to fail when a user was
  editing their house after robbing a house, and the robbed house was
  simultaneously being edited by that house's owner (thanks Jeremiah Reid, who 
  was spuriously timed out of his house 20 times). 

--Fixed SQL query bug when searching house tables in web admin UI.




Version 2    2013-February-27    (private pre-alpha)

--Added recording and playback of time() values in game recording system.  This
  fixes playback timing bugs when the playback machine runs the game slower
  or faster than the original recording machine (or when playback is manually
  slowed or sped up).

--Removed an error-prone initial mouse-warp-to-center call that was potentially
  causing future mouse motion events to be ignored.
  
--Fixed server typo that resulted in stolen paintings not being added to the
  robber's house (thanks Allen Trivette).

--Fixed TextField glitchy behavior when user types forbidden characters.

--Fixed major bug in path finding for family-blocked-in detection 
  (thanks Eric McQuiggan). 

--Fixed tool tip bug that triggered music toggle button tip spuriously 
  (thanks Garrett).

--Fixed so that empty self-test recordings (when user edits backpack but 
  not house map) do not replace last valid self-test recording in database.

--Fixed 'Family blocked in' message overlaying Done button on house load.

--Fixed dead wife sprites overhanging walls (and also moved all dead objects 
  under wall shadows, which looks much better).

--Added better logging of flush operations on server.

--Fixed lingering pitbull attack stance post-robbery.

--Fixed so that erase highlights (darkening) in editor match state of object 
  being erased.

--Changed so that picking up a family member who is standing with a mobile does
  not erase that mobile.

--Fixed so that dead wife not shown carrying money during self tests.
